Enhance UI: add glass morphism effect, update font style, adjust feature card layout

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gowalla Explorer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 </head>
@@ -40,10 +43,6 @@
             </div>
         </div>
     </main>
-
-    <footer>
-        <p>&copy; 2023 Gowalla Explorer - INFS4205/7205 Project</p>
-    </footer>
 
     <script src="js/main.js"></script>
 </body>
