--- a/public/chatbot.html
+++ b/public/chatbot.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Chatbot - Gowalla Explorer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -15,7 +18,7 @@
     <main class="container">
         <a href="index.html" class="back-link">← Back to Home</a>
         
-        <h2 class="page-heading">AI Chatbot</h2>
+        <h2 class="page-heading">LLM-based AI Chatbot</h2>
         <p class="text-center">Ask questions about the Gowalla dataset and get intelligent answers</p>
 
         <div class="alert alert-danger" id="error-message"></div>
